@@ -1,0 +1,6 @@
+	.section	sect, "axG", @progbits, sectgroup, comdat
+	.global	_start
+_start:
+	.cfi_startproc
+	.skip 16
+	.cfi_endproc
