@@ -1,3 +1,7 @@
+2008-09-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* ld-elf/eh-group.exp, ld-elf/eh-group1.s, ld-elf/eh-group2.s: New test.
+
 2008-08-26  Nick Clifton  <nickc@redhat.com>
 
 	* ld-arm/arm-elf.exp: Add farcall-thumb-arm-short test.
